--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 	<title>Tugas Desain Web</title>
-	<link rel="stylesheet" type="text/css" href=ext01.css">
+	<link rel="stylesheet" type="text/css" href="ext01.css">
 </head>
 <body>
 	<div class="wrap">
